--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.4.21",
+    "gsap": "^3.13.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
