--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "react-scroll": "^1.9.3",
+    "swiper": "^12.0.3",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
